@@ -1,3 +1,9 @@
+2006-06-15  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl: modify CVS location after SF changes
+
+	* README.txt: correct reference email address
+
 2006-02-28  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (tkcon): update 'gets stdin' override (tkcon congets)
